--- a/client/css/input.css
+++ b/client/css/input.css
@@ -12,11 +12,13 @@
     width: 60%;
 }
 
-#chartOne {
-    width: fit-content;
-    height: 200px;
-    width: 50%;
+#chartDanceability {
+  position: relative;
+  margin: auto;
+  height: 80vh;
+  width: 80vw;
 }
+
 
 #navigationLinks {
     margin-top: 3px;
